# MathPilot

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  deploy.ps1  main.py  math_mentor.db  pyproject.toml  requirements.txt  test_client_fix.py  test_results.txt  test_search.py
.streamlit/: secrets.toml.example
backend/: __init__.py  api_server.py  config.py  episodic_memory.py  executor.py  logging_config.py  math_mentor.db  memory.py  ocr.py  orchestrator.py  parser.py  schemas.py  solver.py  test_delete.py
backend/agents/: __init__.py  base.py  parser.py  router.py  solver.py  verifier.py
backend/data/pyqs/: jee_mains_math_sample.json  jee_math_all.json  jee_math_sample.json  sample_pyqs.json
backend/deck_generator/: __init__.py  diagrams.py  exporter.py  generator.py  models.py  test_deck.py  test_output_diagram.html  test_output_parsed.html  test_output_structured.html  themes.py
backend/input/: __init__.py  asr.py  normalizer.py  ocr.py
backend/kb_builder/: __init__.py  aggregator.py  classifier.py  combine_datasets.py  doc_generator.py  embedder.py  extract_jee_mains.py  extract_math.py  pipeline.py  pipeline_v2.py
backend/knowledge/: __init__.py  rag.py
backend/memory_index/: jee_math.index  metadata.json
backend/prompts/: __init__.py  solver_basic.md  solver_contextual.md
backend/utils/: __init__.py  text_utils.py
frontend/: app.py  helper_inputs.py
frontend-next/: package-lock.json  package.json
tests/: test_orchestrator.py  test_rag_solver.py  test_router.py  test_solver.py  test_verifier.py  verify_phase3.py
(+216 files in other folders)
