[project]
name = "math-mentor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-vision>=3.12.0",
    "google-generativeai>=0.8.6",
    "latex2sympy2>=1.9.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pillow>=12.1.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.53.0",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
