[project]
name = "math-mentor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.115.0",
    "google-cloud-speech>=2.36.0",
    "google-cloud-vision>=3.12.0",
    "google-genai>=1.59.0",
    "latex2sympy2>=1.9.1",
    "markdown>=3.10",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pillow>=12.1.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "sentence-transformers>=5.2.0",
    "sse-starlette>=2.2.0",
    "streamlit>=1.53.0",
    "sympy>=1.14.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "frontend*"]
